# pos-backend

./: .env  Cargo.toml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2023-04-26-022645_create_products/: up.sql
migrations/2023-04-27-161701_users/: up.sql
src/: lib.rs  main.rs  schema.rs
src/apis/: auth_api.rs  product_api.rs
src/config/: db_connection.rs  env.rs  jwt.rs
src/extractor/: authentication_token.rs
src/middleware/: authentication.rs  authentication_token.rs
src/models/: product.rs  user.rs
src/utils/: passwords.rs
