[package]
name = "pos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "numeric"] }
dotenvy = "0.15"
bigdecimal = {version = "0.3", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
chrono = { version = "0.4.24", features = ["serde"] }
futures-util = "0.3.28"
actix-service = "2.0.2"
