[package]
name = "pos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.0.4", features = ["postgres", "r2d2", "uuid", "numeric", "chrono", "time", "serde_json", "extras"] }
dotenvy = "0.15"
bigdecimal = {version = "0.3", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
chrono = { version = "0.4.24", features = ["serde"] }
futures-util = "0.3.28"
actix-service = "2.0.2"
uuid = { version = "1.3.2", features = ["serde", "v7", "v4"] }
password-hash = "0.5.0"
argon2 = "0.5.0"
